# warehouse-robotics

./: .gitignore  Dockerfile
_ARDUCAM/: arducam_links.txt  my-overlay.dts  output.txt
_SCRIPT/: control.sh  i2c_scan.sh  run_bridge.sh
around_chair/: around_chair.py  package.xml  setup.cfg  setup.py
aruco_marker_stuff/: calibrate_charuco.py  calibration.json  camera_matrix.npy  capture_charuco.py  detection.py  generate_charuco.py  generate_marker.py
cam_driver/: install.bash
cam_driver/camera/cfg/: front_camera.yaml
car_follower/: package.xml  setup.cfg  setup.py
car_follower/car_follower/: depth_follower_node.py
car_follower/launch/: car_follower.launch.py
car_following/: package.xml  setup.py
car_following/car_follower/: depth_follower_node.py
car_following/launch/: car_follower.launch.py
foxglove/: Dockerfile  run.sh
idm_robot/: car.py  idm_robot.py  idm_robot2.py  idm_robot_with_camera.py  package.xml  robomaster_idm.py  robomaster_notebook.ipynb  setup.cfg  setup.py
move_forward/: .install.bash.swo  CMakeLists.txt  Dockerfile  install.bash  package.xml  setup.cfg  setup.py
move_forward/move_forward/: move_forward.py
move_forward/move_forward/src/move_forward/: move_forward.py
read_camera/: calibration.pckl  camera_calibration.py  package.xml  read_camera.py  setup.py
robomaster_bridge/: Dockerfile  install.bash  requirements.txt
teleop_awards_demo/: package.xml  setup.cfg  setup.py  teleop_awards_demo.py
teleop_keyboard/src/: teleop_keyboard.py
teleop_twist_keyboard-dashing/: aruco_controller.py  collisionavoidance.py  detection.py  newdetection.py  setup.py  teleop_twist_keyboard.py
