<?xml version="1.0"?>
<package format="2">
  <name>car_follower</name>
  <version>1.0.0</version>
  <description>
    A node to perform depth-based car following using Depth Anything V2
  </description>

  <maintainer email="rachen@mit.edu">Richard Chen</maintainer>

  <license>BSD License 2.0</license>

  <author email="rachen@mit.edu">Richard Chen</author>
  <author>Eve Silfanus</author>
  <author>James Shaw</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
