<?xml version="1.0"?>
<package format="2">
  <name>read_camera</name>
  <version>1.0.0</version>
  <description>
    A test node to read camera input.
  </description>

  <maintainer email="rachen@mit.edu">Richard Chen</maintainer>

  <license>BSD License 2.0</license>

  <author email="rachen@mit.edu">Richard Chen</author>
  <author>Eve Silfanus</author>
  <author>James Shaw</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
